syntax = "proto3";

package harmonify.movie_reservation_system.user;

import "google/protobuf/timestamp.proto";

service AuthService {
    // Authenticate and authorize JWT
    rpc Auth(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
    // JWT
    string accessToken = 1;
    // OPA policy ID to check for permission
    optional string policy_id = 2;
}

message AuthResponse {
    // User information, if authenticated
    optional UserInfo userInfo = 1;
}

message UserInfo {
    string uuid = 1;
    string username = 2;
    string email = 3;
    string phoneNumber = 4;
    string firstName = 5;
    string lastName = 6;
    bool isEmailVerified = 7;
    bool isPhoneNumberVerified = 8;
    google.protobuf.Timestamp createdAt = 9;
    google.protobuf.Timestamp updatedAt = 10;
    google.protobuf.Timestamp deletedAt = 11;
    repeated string roles = 12;
}

message CheckPermissionRequest {
    string uuid = 1;
    string permission = 2;
}

message CheckPermissionResponse {
    bool hasPermission = 1;
}
